--- a/KDIC/Base.lproj/Main_iPhone.storyboard
+++ b/KDIC/Base.lproj/Main_iPhone.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12F37" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="N02-Iw-FFa">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12F37" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="N02-Iw-FFa">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
     </dependencies>
@@ -8,8 +8,12 @@
         <scene sceneID="pde-71-hRx">
             <objects>
                 <viewController id="N02-Iw-FFa" customClass="DeckController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="hS7-3i-HC4"/>
+                        <viewControllerLayoutGuide type="bottom" id="bZv-KQ-0Yn"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ncs-rs-jhK">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -22,13 +26,21 @@
         <scene sceneID="ufC-wZ-h7g">
             <objects>
                 <viewController storyboardIdentifier="StreamView" title="KDIC Radio" id="vXZ-lx-hvc" customClass="ViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="SQ2-Lg-iJE"/>
+                        <viewControllerLayoutGuide type="bottom" id="ZzD-Lk-kI9"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Y3h-EY-oEk">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="RHB-13-4TN">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RHB-13-4TN">
                                 <rect key="frame" x="137" y="373" width="46" height="46"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="46" id="7Ky-pr-Yu6"/>
+                                    <constraint firstAttribute="width" constant="46" id="PcK-kI-3rP"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <state key="normal" title="Button" image="play.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -37,43 +49,54 @@
                                     <action selector="playPauseButtonTap:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="b3o-Kh-V6v"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iTunesArtwork.png" id="gby-y7-pvw">
-                                <rect key="frame" x="60" y="107" width="200" height="200"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iTunesArtwork.png" translatesAutoresizingMaskIntoConstraints="NO" id="gby-y7-pvw">
+                                <rect key="frame" x="20" y="107" width="280" height="200"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                             </imageView>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No stream available!" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="V5q-vm-xr2">
-                                <rect key="frame" x="40" y="315" width="240" height="21"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No stream available!" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V5q-vm-xr2">
+                                <rect key="frame" x="20" y="315" width="280" height="21"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please check back later." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="zAU-pw-1E2">
-                                <rect key="frame" x="40" y="344" width="240" height="21"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please check back later." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zAU-pw-1E2">
+                                <rect key="frame" x="20" y="344" width="280" height="21"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="WLc-lQ-nKD"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" alpha="0.69999999999999973" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="volume_min.png" id="SIm-ek-lkT">
+                            <imageView userInteractionEnabled="NO" alpha="0.69999999999999973" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="volume_min.png" translatesAutoresizingMaskIntoConstraints="NO" id="SIm-ek-lkT">
                                 <rect key="frame" x="30" y="427" width="25" height="25"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="25" id="gaq-D4-i6Q"/>
+                                    <constraint firstAttribute="height" constant="25" id="zXw-gy-UhW"/>
+                                </constraints>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" alpha="0.69999999999999973" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="volume_max.png" id="yiP-zU-kJJ">
+                            <imageView userInteractionEnabled="NO" alpha="0.69999999999999973" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="volume_max.png" translatesAutoresizingMaskIntoConstraints="NO" id="yiP-zU-kJJ">
                                 <rect key="frame" x="276" y="427" width="25" height="25"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kdic-wide.png" id="1kT-w0-Xmg">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kdic-wide.png" translatesAutoresizingMaskIntoConstraints="NO" id="1kT-w0-Xmg">
                                 <rect key="frame" x="0.0" y="20" width="320" height="72"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <view contentMode="scaleToFill" id="RH3-U9-Edf">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RH3-U9-Edf">
                                 <rect key="frame" x="52" y="427" width="216" height="33"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="lEZ-JT-cEq">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lEZ-JT-cEq">
                                 <rect key="frame" x="11" y="44" width="30" height="25"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="25" id="7Vn-iR-g8X"/>
+                                    <constraint firstAttribute="width" constant="30" id="rZc-mG-dw0"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <state key="normal" image="menu_icon.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -84,6 +107,36 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="RH3-U9-Edf" firstAttribute="top" secondItem="RHB-13-4TN" secondAttribute="bottom" constant="8" symbolic="YES" id="6en-cT-dRi"/>
+                            <constraint firstAttribute="trailing" secondItem="yiP-zU-kJJ" secondAttribute="trailing" constant="19" id="7TQ-Dx-P3N"/>
+                            <constraint firstAttribute="bottom" secondItem="V5q-vm-xr2" secondAttribute="bottom" constant="144" id="7Ur-y1-jfp"/>
+                            <constraint firstItem="lEZ-JT-cEq" firstAttribute="leading" secondItem="Y3h-EY-oEk" secondAttribute="leading" constant="11" id="7s7-DQ-kAL"/>
+                            <constraint firstAttribute="trailing" secondItem="1kT-w0-Xmg" secondAttribute="trailing" id="9ro-kr-Ofn"/>
+                            <constraint firstItem="yiP-zU-kJJ" firstAttribute="top" secondItem="RH3-U9-Edf" secondAttribute="top" id="FqH-TA-N8r"/>
+                            <constraint firstItem="gby-y7-pvw" firstAttribute="top" secondItem="Y3h-EY-oEk" secondAttribute="top" constant="107" id="KZD-46-ZYL"/>
+                            <constraint firstItem="gby-y7-pvw" firstAttribute="centerX" secondItem="1kT-w0-Xmg" secondAttribute="centerX" id="Ly3-4j-rNW"/>
+                            <constraint firstItem="zAU-pw-1E2" firstAttribute="trailing" secondItem="V5q-vm-xr2" secondAttribute="trailing" id="NC4-w7-zk1"/>
+                            <constraint firstItem="V5q-vm-xr2" firstAttribute="leading" secondItem="zAU-pw-1E2" secondAttribute="leading" id="Pqi-hq-o0Z"/>
+                            <constraint firstItem="V5q-vm-xr2" firstAttribute="leading" secondItem="Y3h-EY-oEk" secondAttribute="leading" constant="20" id="Rtx-dN-F14"/>
+                            <constraint firstItem="gby-y7-pvw" firstAttribute="centerX" secondItem="V5q-vm-xr2" secondAttribute="centerX" id="YfG-5g-ii9"/>
+                            <constraint firstAttribute="bottom" secondItem="RH3-U9-Edf" secondAttribute="bottom" constant="20" id="afF-Mn-ZHR"/>
+                            <constraint firstItem="RHB-13-4TN" firstAttribute="centerX" secondItem="RH3-U9-Edf" secondAttribute="centerX" id="awI-xX-uqO"/>
+                            <constraint firstAttribute="bottom" secondItem="gby-y7-pvw" secondAttribute="bottom" constant="173" id="b5P-WL-9ZW"/>
+                            <constraint firstItem="1kT-w0-Xmg" firstAttribute="top" secondItem="Y3h-EY-oEk" secondAttribute="top" constant="20" symbolic="YES" id="bNc-bB-DEL"/>
+                            <constraint firstAttribute="bottom" secondItem="yiP-zU-kJJ" secondAttribute="bottom" constant="28" id="cwX-L8-PhQ"/>
+                            <constraint firstItem="lEZ-JT-cEq" firstAttribute="top" secondItem="SQ2-Lg-iJE" secondAttribute="bottom" constant="24" id="gYg-zM-N4x"/>
+                            <constraint firstItem="gby-y7-pvw" firstAttribute="leading" secondItem="Y3h-EY-oEk" secondAttribute="leading" constant="20" id="hey-sE-Bl0"/>
+                            <constraint firstItem="1kT-w0-Xmg" firstAttribute="leading" secondItem="Y3h-EY-oEk" secondAttribute="leading" id="l6d-2c-rTx"/>
+                            <constraint firstItem="RHB-13-4TN" firstAttribute="centerX" secondItem="zAU-pw-1E2" secondAttribute="centerX" id="ned-NC-MXf"/>
+                            <constraint firstAttribute="bottom" secondItem="SIm-ek-lkT" secondAttribute="bottom" constant="28" id="pio-xr-Jl3"/>
+                            <constraint firstItem="1kT-w0-Xmg" firstAttribute="centerY" secondItem="lEZ-JT-cEq" secondAttribute="centerY" id="pl4-qo-1Bd"/>
+                            <constraint firstItem="yiP-zU-kJJ" firstAttribute="leading" secondItem="RH3-U9-Edf" secondAttribute="trailing" constant="8" symbolic="YES" id="ryf-Md-oAv"/>
+                            <constraint firstAttribute="bottom" secondItem="zAU-pw-1E2" secondAttribute="bottom" constant="115" id="suH-2G-pQW"/>
+                            <constraint firstItem="SIm-ek-lkT" firstAttribute="top" secondItem="RH3-U9-Edf" secondAttribute="top" id="uJ0-hw-482"/>
+                            <constraint firstItem="RH3-U9-Edf" firstAttribute="leading" secondItem="Y3h-EY-oEk" secondAttribute="leading" constant="52" id="uvC-X7-rDE"/>
+                            <constraint firstItem="SIm-ek-lkT" firstAttribute="leading" secondItem="Y3h-EY-oEk" secondAttribute="leading" constant="30" id="wG8-WV-tFu"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="albumArtView" destination="gby-y7-pvw" id="4ZT-qb-Qle"/>
@@ -103,7 +156,7 @@
             <objects>
                 <tableViewController storyboardIdentifier="Schedule" id="end-Ob-wk3" customClass="ScheduleViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" allowsSelection="NO" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="XyV-DI-DnS">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <sections/>
@@ -129,6 +182,6 @@
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4"/>
+        <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
 </document>
