--- a/KDIC/Base.lproj/Main_iPhone.storyboard
+++ b/KDIC/Base.lproj/Main_iPhone.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12F37" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="N02-Iw-FFa">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="N02-Iw-FFa">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
     </dependencies>
@@ -53,14 +53,14 @@
                                 <rect key="frame" x="20" y="107" width="280" height="200"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                             </imageView>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="V5q-vm-xr2">
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="V5q-vm-xr2">
                                 <rect key="frame" x="20" y="315" width="280" height="21"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="zAU-pw-1E2">
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please wait for the stream to load!" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="zAU-pw-1E2">
                                 <rect key="frame" x="20" y="344" width="280" height="21"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <constraints>
@@ -84,6 +84,9 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kdic-wide.png" translatesAutoresizingMaskIntoConstraints="NO" id="1kT-w0-Xmg">
                                 <rect key="frame" x="0.0" y="20" width="320" height="72"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="72" id="3Js-PK-UJS"/>
+                                </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RH3-U9-Edf">
                                 <rect key="frame" x="52" y="427" width="216" height="33"/>
@@ -91,11 +94,11 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lEZ-JT-cEq">
-                                <rect key="frame" x="11" y="44" width="30" height="25"/>
+                                <rect key="frame" x="270" y="43" width="30" height="25"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="25" id="7Vn-iR-g8X"/>
-                                    <constraint firstAttribute="width" constant="30" id="rZc-mG-dw0"/>
+                                    <constraint firstAttribute="height" constant="25" id="T8V-Tk-Baf"/>
+                                    <constraint firstAttribute="width" constant="30" id="o8J-Pf-NvM"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <state key="normal" image="menu_icon.png">
@@ -111,7 +114,6 @@
                             <constraint firstItem="RH3-U9-Edf" firstAttribute="top" secondItem="RHB-13-4TN" secondAttribute="bottom" constant="8" symbolic="YES" id="6en-cT-dRi"/>
                             <constraint firstAttribute="trailing" secondItem="yiP-zU-kJJ" secondAttribute="trailing" constant="19" id="7TQ-Dx-P3N"/>
                             <constraint firstAttribute="bottom" secondItem="V5q-vm-xr2" secondAttribute="bottom" constant="144" id="7Ur-y1-jfp"/>
-                            <constraint firstItem="lEZ-JT-cEq" firstAttribute="leading" secondItem="Y3h-EY-oEk" secondAttribute="leading" constant="11" id="7s7-DQ-kAL"/>
                             <constraint firstAttribute="trailing" secondItem="1kT-w0-Xmg" secondAttribute="trailing" id="9ro-kr-Ofn"/>
                             <constraint firstItem="yiP-zU-kJJ" firstAttribute="top" secondItem="RH3-U9-Edf" secondAttribute="top" id="FqH-TA-N8r"/>
                             <constraint firstItem="gby-y7-pvw" firstAttribute="top" secondItem="Y3h-EY-oEk" secondAttribute="top" constant="107" id="KZD-46-ZYL"/>
@@ -124,8 +126,8 @@
                             <constraint firstItem="RHB-13-4TN" firstAttribute="centerX" secondItem="RH3-U9-Edf" secondAttribute="centerX" id="awI-xX-uqO"/>
                             <constraint firstAttribute="bottom" secondItem="gby-y7-pvw" secondAttribute="bottom" constant="173" id="b5P-WL-9ZW"/>
                             <constraint firstItem="1kT-w0-Xmg" firstAttribute="top" secondItem="Y3h-EY-oEk" secondAttribute="top" constant="20" symbolic="YES" id="bNc-bB-DEL"/>
+                            <constraint firstAttribute="trailing" secondItem="lEZ-JT-cEq" secondAttribute="trailing" constant="20" id="cT3-2l-W94"/>
                             <constraint firstAttribute="bottom" secondItem="yiP-zU-kJJ" secondAttribute="bottom" constant="28" id="cwX-L8-PhQ"/>
-                            <constraint firstItem="lEZ-JT-cEq" firstAttribute="top" secondItem="SQ2-Lg-iJE" secondAttribute="bottom" constant="24" id="gYg-zM-N4x"/>
                             <constraint firstItem="gby-y7-pvw" firstAttribute="leading" secondItem="Y3h-EY-oEk" secondAttribute="leading" constant="20" id="hey-sE-Bl0"/>
                             <constraint firstItem="1kT-w0-Xmg" firstAttribute="leading" secondItem="Y3h-EY-oEk" secondAttribute="leading" id="l6d-2c-rTx"/>
                             <constraint firstItem="RHB-13-4TN" firstAttribute="centerX" secondItem="zAU-pw-1E2" secondAttribute="centerX" id="ned-NC-MXf"/>
